Fixed spartinizer warnings
Signed-off-by: Aviad Cohen <aviadcohen7@gmail.com>